@@ -12,6 +12,7 @@ procps-ng-NEXT
   * pkill: Return 0 only if we can kill process            Debian #852758
   * top: show fewer memory decimal places (configurable)
   * top: provide command line switch for memory scaling
+  * top: provide command line switch for CPU States
 
 procps-ng-3.3.12
 ----------------
